# nomad

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  clippy.toml  flake.nix  release.sh  rust-toolchain.toml
benches/: Cargo.toml  build.rs
benches/src/: lib.rs  main.rs
benches/src/collab/: mod.rs  start.rs
crates/auth/: Cargo.toml
crates/auth-types/: Cargo.toml
crates/auth-types/data/: auth_server_jwt_signing_public_key.pem
crates/auth-types/src/: access_token.rs  audience.rs  claims.rs  email_address.rs  github_access_token.rs  github_client_id.rs  json_web_token.rs  lib.rs  oauth_state.rs
crates/auth/src/: auth.rs  auth_infos.rs  auth_state.rs  config.rs  credential_store.rs  github.rs  lib.rs  login.rs  logout.rs
crates/auth/src/actions/: login.rs  logout.rs
crates/auth/src/backend/: mock.rs  mod.rs  neovim.rs
crates/auth/src/editors/: mock.rs  mod.rs  neovim.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: arboard_impl.rs  clipboard.rs  fallible_init.rs  lib.rs
crates/collab-project/: Cargo.toml
crates/collab-project/src/: annotation.rs  binary.rs  lib.rs  project.rs  project_builder.rs  symlink.rs  text.rs
crates/collab-project/src/fs/: directory.rs  file.rs  mod.rs  node.rs  op.rs  sync.rs
crates/collab-types/: Cargo.toml
crates/collab-types/src/: annotation.rs  binary.rs  counter.rs  fs.rs  github_handle.rs  lamport.rs  lib.rs  message.rs  peer.rs  peer_id.rs  project_request.rs  project_response.rs  text.rs
crates/collab2/: Cargo.toml
crates/collab2/src/: collab.rs  collab_backend.rs  config.rs  join.rs  leave.rs  lib.rs  project.rs  session.rs  sessions.rs  start.rs  yank.rs
crates/collab2/src/actions/: join.rs  mod.rs  start.rs  user_busy_error.rs
crates/collab2/src/backend/: mod.rs  neovim.rs  test.rs
crates/collab2/src/config/: mod.rs  server_address.rs  server_socket.rs
crates/collab2/src/session/: detach_buffer_actions.rs  mod.rs  peer_tooltip.rs  project.rs  register_buffer_actions.rs  session_ctx.rs  sync_cursor.rs  sync_replacement.rs
crates/collab2/tests/: join.rs  start.rs
crates/common/: Cargo.toml
crates/common/src/: enable.rs  runtime.rs
crates/fs/: Cargo.toml
crates/fs-filters/: Cargo.toml
crates/fs-filters/src/: gitignore.rs  lib.rs
crates/fs/src/: directory.rs  fs.rs  fs_node_kind.rs  lib.rs  node.rs  os.rs  os_fs.rs  symlink.rs
crates/nomad/: Cargo.toml
crates/nomad-neovim/: Cargo.toml
crates/nomad-neovim/lua/: command.lua  process.lua
crates/nomad-neovim/src/: file_appender.rs  lib.rs  nomad.rs
crates/nomad/macros/: Cargo.toml
crates/nomad/macros/src/: async_action.rs  lib.rs  module_name.rs  test.rs
crates/nomad/src/: action.rs  api.rs  autocmd.rs  buf_attach.rs  buffer.rs  buffer_id.rs  byte_offset.rs  cola_replacement.rs  command.rs  command_args.rs  config.rs  decoration_provider.rs  diagnostics.rs  edit.rs  enable.rs  from_ctx.rs  lib.rs  maybe_result.rs  module.rs  module_api.rs  module_commands.rs  module_name.rs  nomad.rs  nomad_command.rs  nvim_buffer.rs  object_safe_module.rs  point.rs  serde.rs  shared.rs  test.rs  text.rs  warning.rs
crates/nomad/src/autocmds/: buf_add.rs  buf_enter.rs  buf_leave.rs  buf_unload.rs  cursor_moved.rs  mod.rs
crates/nomad/src/config/: config.rs
crates/nomad/src/ctx/: buffer.rs  neovim.rs  text_buffer.rs  text_file.rs
crates/nomad/src/editor/: buffer.rs  buffer_id.rs  buffer_state.rs  mod.rs
crates/nomad/src/events/: cursor.rs
crates/nomad/src/log/: mod.rs  panic_hook.rs  tracing_subscriber.rs
crates/nomad/src/module/: mod.rs  module.rs  module_id.rs  module_name.rs
crates/nomad/src/neovim/: api.rs  autocmd.rs  buffer.rs  cursor.rs  mod.rs  module_api.rs  neovim.rs  offset.rs  point.rs
crates/nomad/src/runtime/: ctx.rs  executor.rs  mod.rs  sleep.rs
crates/nomad/src/streams/: edits.rs  focused_buffer.rs  mod.rs
crates/nomad/src/tests/: async_body.rs  build.rs  emoji.rs  letter.rs  mod.rs  text.rs
crates/nomad/tests/: Cargo.toml  build.rs
crates/nomad/tests/src/: buffer_sync.rs
crates/real-fs/: Cargo.toml
crates/real-fs/src/: directory.rs  file.rs  io_error_ext.rs  lib.rs  metadata.rs  real_fs.rs  symlink.rs  tempdir.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/version/: Cargo.toml  build.rs
crates/version/src/: emit_version.rs  lib.rs  version.rs
crates/version/src/editors/: mod.rs  neovim.rs
crates/walkdir/: Cargo.toml
crates/walkdir/src/: accumulate.rs  accumulator.rs  dir_entry.rs  filter.rs  fs_ext.rs  gitignore.rs  lib.rs  walkdir.rs
crates/walkdir/tests/: gitignore.rs
lib/nvimx/: Cargo.toml
lib/nvimx/nvimx-action/: Cargo.toml
lib/nvimx/nvimx-action/src/: action_name.rs  async_action.rs  lib.rs
lib/nvimx/nvimx-common/: Cargo.toml
lib/nvimx/nvimx-ctx/: Cargo.toml
lib/nvimx/nvimx-emit/: Cargo.toml
lib/nvimx/nvimx-event/: Cargo.toml
lib/nvimx/nvimx-executor/: Cargo.toml
lib/nvimx/nvimx-fs/: Cargo.toml
lib/nvimx/nvimx-plugin/: Cargo.toml
lib/nvimx/nvimx-tests/: Cargo.toml
lib/nvimx/nvimx-ui/: Cargo.toml
lib/nvimx/src/: executor.rs  lib.rs
lib/nvimx2/: Cargo.toml
lib/nvimx2/backend-neovim/: Cargo.toml
lib/nvimx2/backend-test/: Cargo.toml
lib/nvimx2/nvimx-core/: Cargo.toml
lib/nvimx2/nvimx-macros/: Cargo.toml
lib/nvimx2/src/: action.rs  command.rs  lib.rs  module.rs  module_api.rs  plugin.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/collab/: cursors.rs  event_stream.rs  join.rs  mod.rs  start.rs  text_edits.rs
tests/src/collab_project/: encode.rs
tests/src/ed/: buffer.rs  cursor.rs  mod.rs  selection.rs  test_editor.rs
tests/src/editor/: buffer.rs  cursor.rs  mod.rs  selection.rs  test_editor.rs
tests/src/fs_filters/: gitignore.rs
tests/src/gitignore/: mod.rs
tests/src/mock/: buffer.rs  cursor.rs
tests/src/neovim/: buffer.rs  cursor.rs  events.rs  mod.rs  selection.rs
tests/src/thread_pool/: mod.rs
tests/src/utils/: future_ext.rs  fuzz.rs  mod.rs
tests/src/walkdir/: gitignore.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: build.rs  lib.rs  main.rs
xtask/src/neovim/: build.rs
(+499 files in other folders)
