[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
auth = ["dep:auth"]
collab = ["dep:auth", "dep:collab", "dep:flume"]
git-in-PATH = []
walkdir = ["dep:futures-executor", "dep:tempdir", "dep:walkdir"]

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
ed = { workspace = true }
futures-lite = { workspace = true, features = ["default"] }
mock = { workspace = true }

# Auth-related dependencies.
auth = { workspace = true, optional = true, features = ["mock"] }

# Collab-related dependencies.
collab = { workspace = true, optional = true, features = ["mock"] }
flume = { workspace = true, optional = true }

# Walkdir-related dependencies.
futures-executor = { workspace = true, optional = true }
tempdir = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true, features = ["gitignore"] }

[lints]
workspace = true
