[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
