[package]
name = "auth-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
base64 = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }

[lints]
workspace = true
