[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
test = ["nvimx2/tests"]

[dependencies]
collab-server = { git = "ssh://git@github.com/nomad/collab.git", default-features = false, features = [
  "client",
  "nomad",
] }
nvimx2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
