[package]
name = "clipboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
arboard = ["dep:arboard"]
fallible-init = ["dep:either"]

[dependencies]
arboard = { workspace = true, optional = true, features = [
  "wayland-data-control",
] }
either = { workspace = true, optional = true }

[lints]
workspace = true
