[package]
name = "collab-project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
serde = ["collab-types/serde", "smallvec/serde", "smol_str/serde", "dep:serde"]

[dependencies]
cauchy = { workspace = true }
collab-types = { workspace = true }
fxhash = { workspace = true }
nohash = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
smallvec = { workspace = true }
smol_str = "0.3"

[lints]
workspace = true
