[package]
name = "collab-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["serde"]
serde = [
  "bytes/serde",
  "cola/serde",
  "crop/serde",
  "puff/serde",
  "smallvec/serde",
  "smol_str/serde",
  "dep:serde",
]

[dependencies]
bytes = "1"
cauchy = { workspace = true }
cola = "0.5"
crop = "0.4"
derive_more = { workspace = true }
fxhash = { workspace = true }
nohash = { workspace = true }
puff = { git = "ssh://git@github.com/nomad/puff.git" }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }
smallvec = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true
