[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
neovim-0-9 = ["nvim-oxi/neovim-0-9"]
neovim-nightly = ["nvim-oxi/neovim-nightly"]

[dependencies]
nvim-oxi = { workspace = true, features = ["libuv"] }
serde = { workspace = true }
serde_path_to_error = "0.1"
tracing = { workspace = true }
