[package]
name = "fs-filters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
gitignore = []

[dependencies]
abs-path = { workspace = true }
cauchy = { workspace = true }
derive_more = { workspace = true }
ed = { workspace = true }
either = { workspace = true }
flume = { workspace = true }
fs = { workspace = true, features = ["filter"] }
real-fs = { workspace = true }

[dev-dependencies]
abs-path = { workspace = true, features = ["macros"] }

[lints]
workspace = true
