[package]
name = "fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["walk"]
filter = ["dep:either"]
walk = ["dep:flume", "dep:send-future"]

[dependencies]
abs-path = { workspace = true }
cauchy = { workspace = true }
derive_more = { workspace = true }
futures-util = { workspace = true, features = ["alloc", "async-await-macro"] }

either = { workspace = true, optional = true }
flume = { workspace = true, optional = true }
send-future = { workspace = true, optional = true }

[lints]
workspace = true
