[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "collab-server"
path = "src/main.rs"

[dependencies]
collab-server = { workspace = true, features = ["server"] }
collab-types = { workspace = true }
nomad-collab-params = { workspace = true }
auth-types = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = [ "rt-multi-thread", "net", "io-util", "macros" ] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = { workspace = true, features = ["io"] }

[patch.crates-io]
message-channel = { git = "https://github.com/nomad/collab-server.git" }

[lints]
workspace = true
