[package]
name = "version"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ed = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false }
git2 = { workspace = true }

[lints]
workspace = true
