[package]
name = "version"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
editor = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
chrono = { workspace = true }
git2 = { workspace = true }

[lints]
workspace = true
