[package]
name = "version"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
neovim = ["dep:neovim"]

[dependencies]
editor = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Neovim-only dependencies.
neovim = { workspace = true, optional = true }

[build-dependencies]
chrono = { workspace = true }
git2 = { workspace = true }

[lints]
workspace = true
