[package]
name = "walkdir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
gitignore = ["ed/os-fs"]

[dependencies]
derive_more = { workspace = true }
ed = { workspace = true }
flume = { workspace = true, features = ["async"] }
futures-util = { workspace = true, features = ["default"] }
thiserror = { workspace = true }

[lints]
workspace = true
