[package]
name = "nvimx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["neovim-nightly"]
neovim-nightly = [
  "nvim-oxi/neovim-nightly",
  "nvimx-executor/neovim-nightly",
  "nvimx-project/neovim-nightly",
  "nvimx-ui/neovim-nightly",
]

[dependencies]
nvim-oxi = { workspace = true }
nvimx-executor = { workspace = true }
nvimx-macros = { workspace = true }
nvimx-project = { workspace = true }
nvimx-tests = { workspace = true }
nvimx-ui = { workspace = true }

[lints]
workspace = true
