[package]
name = "nvimx2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
mock = ["dep:backend-mock"]
neovim = ["dep:backend-neovim"]
neovim-mlua = ["backend-neovim?/mlua"]
neovim-nightly = ["backend-neovim?/nightly"]

[dependencies]
nvimx-core = { path = "./core" }
backend-mock = { path = "./backend-mock", optional = true }
backend-neovim = { path = "./backend-neovim", optional = true }

[lints]
workspace = true
