[package]
name = "nvimx-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nvimx-action = { workspace = true }
nvimx-common = { workspace = true }
nvimx-ctx = { workspace = true }
nvimx-diagnostics = { workspace = true }

[lints]
workspace = true
