[package]
name = "nvimx-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nvimx-common = { workspace = true }
nvimx-ctx = { workspace = true }
nvimx-diagnostics = { workspace = true }
nvimx-plugin = { workspace = true }

[lints]
workspace = true
