[package]
name = "nvimx-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["neovim-nightly"]
neovim-nightly = ["nvim-oxi/neovim-nightly"]

[dependencies]
nvim-oxi = { workspace = true, features = ["libuv"] }

async-task = "4.7"
concurrent-queue = "2.4"
pin-project-lite = "0.2"

[lints]
workspace = true
