[package]
name = "nvimx-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["neovim-nightly"]
neovim-nightly = ["nvim-oxi/neovim-nightly"]

[dependencies]
nvim-oxi = { workspace = true, features = ["test-terminator"] }
nvimx-executor = { workspace = true }

[lints]
workspace = true
