[package]
name = "nvimx-tests-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
neovim-nightly = ["nvimx/neovim-nightly"]

[build-dependencies]
nvimx = { path = "../../", features = ["tests"] }

[dependencies]
async-io = "2"
futures = "0.3"
nvimx = { path = "../../", features = ["macros", "tests"] }
